--- a/Views/AllSections.cshtml
+++ b/Views/AllSections.cshtml
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Разделы</title>
-    <link href="../wwwroot/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <script src="../wwwroot/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <link href="../wwwroot/css/sections.css" rel="stylesheet">
-    <link href="../wwwroot/css/for_all_pages.css" rel="stylesheet">
+    <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <link href="~/css/sections.css" rel="stylesheet">
+    <link href="~/css/for_all_pages.css" rel="stylesheet">
 </head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
     <div class="d-flex flex-wrap my-nav-bar1 align-items-center justify-content-around">
-        <a href="../Views/index.html" class="logo">HowIdidIT</a>
-        <a href="../Views/index.html" class="pages">Главная</a>
-        <a href="../Views/sections.html" class="pages">Разделы</a>
+        <a href="/" class="logo">HowIdidIT</a>
+        <a href="/" class="pages">Главная</a>
+        <a href="/sections" class="pages">Разделы</a>
     </div>
     <div class="d-flex flex-wrap my-nav-bar2 align-items-center justify-content-around">
         <form class="form-search">
@@ -30,17 +30,17 @@
 </header>
 <main>
     <div class="navigation">
-        <a href="../Views/index.html">
-            <img src="../wwwroot/pictures/home_icon.png" height=20 alt="Главная">Главная
+        <a href="/">
+            <img src="~/pictures/home_icon.png" height=20 alt="Главная">Главная
         </a>
         >>
-        <a href="../Views/sections.html">Разделы</a>
+        <a href="/sections">Разделы</a>
     </div>
     <div class="d-flex justify-content-between">
         <div class="main-block">
             <div class="content-block sections-block">
                 <div class="list-of-sections">
-                    <a href="../Views/section.html" class="link-on-section">Веб-разработка</a>
+                    <a href="/section" class="link-on-section">Веб-разработка</a>
                     <a href="#" class="link-on-section">GameDev</a>
                     <a href="#" class="link-on-section">Сетевые технологии</a>
                     <a href="#" class="link-on-section">DevOps</a>
@@ -115,7 +115,7 @@
         <div class="content-block recent-block">
             <h3 class="text-center">Избранное</h3><hr>
             <ul>
-                <li><a href="../Views/section.html">Веб-разработка</a></li>
+                <li><a href="/section">Веб-разработка</a></li>
                 <li><a href="#">GameDev</a></li>
                 <li><a href="#">Ребят, помогите сделать курсовую</a></li>
                 <li><a href="#">Что такое нормальные формы БД? Поясните, пж!</a></li>
