--- a/Views/Discussion.cshtml
+++ b/Views/Discussion.cshtml
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Обсуждение №1</title>
-    <link href="../wwwroot/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../wwwroot/css/discussion.css" rel="stylesheet">
-    <link href="../wwwroot/css/for_all_pages.css" rel="stylesheet">
+    <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/css/discussion.css" rel="stylesheet">
+    <link href="~/css/for_all_pages.css" rel="stylesheet">
 </head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
     <div class="d-flex flex-wrap my-nav-bar1 align-items-center justify-content-around">
-        <a href="../Views/index.html" class="logo">HowIdidIT</a>
-        <a href="../Views/index.html" class="pages">Главная</a>
-        <a href="../Views/sections.html" class="pages">Разделы</a>
+        <a href="/" class="logo">HowIdidIT</a>
+        <a href="/" class="pages">Главная</a>
+        <a href="/sections" class="pages">Разделы</a>
     </div>
     <div class="d-flex flex-wrap my-nav-bar2 align-items-center justify-content-around">
         <form class="form-search">
@@ -29,19 +29,19 @@
 </header>
 <main>
     <div class="navigation">
-        <a href="../Views/index.html">
-            <img src="../wwwroot/pictures/home_icon.png" height=20 alt="Главная">Главная
+        <a href="/">
+            <img src="~/pictures/home_icon.png" height=20 alt="Главная">Главная
         </a>
         >>
-        <a href="../Views/sections.html">Разделы</a>
+        <a href="/sections">Разделы</a>
         >>
-        <a href="../Views/section.html">Раздел №1</a>
+        <a href="/section">Раздел №1</a>
         >>
-        <a href="../Views/discussion.html">Обсуждение №1</a>
+        <a href="/discussion">Обсуждение №1</a>
     </div>
     <div class="main-block">
         <div class="content-block user-block">
-            <h3><a href="../Views/profile.html">Пользователь</a></h3><br>
+            <h3><a href="/profile">Пользователь</a></h3><br>
             <span>люблю задавать вопросики</span>
         </div>
         <div class="content-block answer-block">
