--- a/Views/Login.cshtml
+++ b/Views/Login.cshtml
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Авторизация</title>
-    <link href="../wwwroot/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../wwwroot/css/for_all_pages.css" rel="stylesheet">
-    <link href="../wwwroot/css/login.css" rel="stylesheet">
+    <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/css/for_all_pages.css" rel="stylesheet">
+    <link href="~/css/login.css" rel="stylesheet">
 </head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
     <div class="d-flex flex-wrap my-nav-bar1 align-items-center justify-content-around">
-        <a href="../Views/index.html" class="logo">HowIdidIT</a>
-        <a href="../Views/index.html" class="pages">Главная</a>
-        <a href="../Views/sections.html" class="pages">Разделы</a>
+        <a href="/" class="logo">HowIdidIT</a>
+        <a href="/" class="pages">Главная</a>
+        <a href="/sections" class="pages">Разделы</a>
     </div>
     <div class="d-flex flex-wrap my-nav-bar2 align-items-center justify-content-around">
         <form class="form-search">
@@ -29,11 +29,11 @@
 </header>
 <main>
     <div class="navigation">
-        <a href="../Views/index.html">
-            <img src="../wwwroot/pictures/home_icon.png" height=20 alt="Главная">Главная
+        <a href="/">
+            <img src="~/pictures/home_icon.png" height=20 alt="Главная">Главная
         </a>
         >>
-        <a href="../Views/login.html">Авторизация</a>
+        <a href="/login">Авторизация</a>
     </div>
     <div class="d-flex flex-column content-block login-block justify-content-between">
         <div class="d-flex flex-column box-login">
@@ -44,7 +44,7 @@
             <div class="d-flex form-passwd flex-column">
                 <label for="floatingPassword">Введите ваш пароль:</label>
                 <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                <a href="../Views/send_email.html" class="forget-passwd align-self-end">Забыли пароль?</a>
+                <a href="/send_email" class="forget-passwd align-self-end">Забыли пароль?</a>
             </div>
         </div>
         <div class="d-flex flex-wrap box-accept justify-content-between align-items-center">
