--- a/Views/Profile.cshtml
+++ b/Views/Profile.cshtml
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Профиль</title>
-    <link href="../wwwroot/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../wwwroot/css/profile.css" rel="stylesheet">
-    <link href="../wwwroot/css/for_all_pages.css" rel="stylesheet">
+    <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/css/profile.css" rel="stylesheet">
+    <link href="~/css/for_all_pages.css" rel="stylesheet">
 </head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
     <div class="d-flex flex-wrap my-nav-bar1 align-items-center justify-content-around">
-        <a href="../Views/index.html" class="logo">HowIdidIT</a>
-        <a href="../Views/index.html" class="pages">Главная</a>
-        <a href="../Views/sections.html" class="pages">Разделы</a>
+        <a href="/" class="logo">HowIdidIT</a>
+        <a href="/" class="pages">Главная</a>
+        <a href="/sections" class="pages">Разделы</a>
     </div>
     <div class="d-flex flex-wrap my-nav-bar2 align-items-center justify-content-around">
         <form class="form-search">
@@ -29,16 +29,16 @@
 </header>
 <main>
     <div class="navigation">
-        <a href="../Views/index.html">
-            <img src="../wwwroot/pictures/home_icon.png" height=20 alt="Главная">Главная
+        <a href="/">
+            <img src="~/pictures/home_icon.png" height=20 alt="Главная">Главная
         </a>
         >>
-        <a href="../Views/profile.html">Профиль</a>
+        <a href="/profile">Профиль</a>
     </div>
     <div class="d-flex justify-content-between">
         <div class="first-column">
             <div class="d-flex flex-column user-avatar content-block justify-content-between align-items-center">
-                <img src="../wwwroot/pictures/avatar.png" height="250" width="250">
+                <img src="~/pictures/avatar.png" height="250" width="250">
                 <form>
                     <button type="button" formaction="../Views/registration.html" formmethod="get" class="btn btn-dark">Сменить аватар</button>
                 </form>
