--- a/Views/SendEmail.cshtml
+++ b/Views/SendEmail.cshtml
@@ -19,12 +19,8 @@
         <form class="form-search">
             <input type="search" class="form-control form-control-dark" placeholder="Поиск..." aria-label="Search">
         </form>
-        <form>
-            <button type="button" formaction="../Views/login.html" formmethod="get" class="btn btn-dark">Авторизация</button>
-        </form>
-        <form>
-            <button type="button" formaction="../Views/registration.html" formmethod="get" class="btn btn-dark">Регистрация</button>
-        </form>
+        <button onclick ="window.location.href = '/login'" class="btn btn-dark">Авторизация</button>
+        <button onclick ="window.location.href = '/registration'" class="btn btn-dark">Регистрация</button>
     </div>
 </header>
 <main>
