--- a/Views/Section.cshtml
+++ b/Views/Section.cshtml
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Раздел №1</title>
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <link href="~/css/sections.css" rel="stylesheet">
     <link href="~/css/for_all_pages.css" rel="stylesheet">
+    <script src="~/js/for_all_pages.js"></script>
+    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
@@ -20,8 +21,8 @@
         <form class="form-search">
             <input type="search" class="form-control form-control-dark" placeholder="Поиск..." aria-label="Search">
         </form>
-        <button onclick ="window.location.href = '/login'" class="btn btn-dark">Авторизация</button>
-        <button onclick ="window.location.href = '/registration'" class="btn btn-dark">Регистрация</button>
+        <button onclick="redirectOnLoginPage()" class="btn btn-dark">Авторизация</button>
+        <button onclick="redirectOnRegistrationPage()" class="btn btn-dark">Регистрация</button>
     </div>
 </header>
 <main>
