--- a/Views/Login.cshtml
+++ b/Views/Login.cshtml
@@ -8,20 +8,21 @@
     <link href="~/css/for_all_pages.css" rel="stylesheet">
     <link href="~/css/login.css" rel="stylesheet">
     <script src="~/js/for_all_pages.js"></script>
+    <script defer src="~/js/login.js"></script>
 </head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
-    <div class="d-flex flex-wrap my-nav-bar1 align-items-center justify-content-around">
+    <div id="my-nav-bar1" class="d-flex flex-wrap align-items-center justify-content-around">
         <a href="/" class="logo">HowIdidIT</a>
         <a href="/" class="pages">Главная</a>
         <a href="/sections" class="pages">Разделы</a>
     </div>
-    <div class="d-flex flex-wrap my-nav-bar2 align-items-center justify-content-around">
+    <div id="my-nav-bar2" class="d-flex flex-wrap align-items-center justify-content-around">
         <form class="form-search">
             <input type="search" class="form-control form-control-dark" placeholder="Поиск..." aria-label="Search">
         </form>
-        <button onclick="redirectOnLoginPage()" class="btn btn-dark">Авторизация</button>
-        <button onclick="redirectOnRegistrationPage()" class="btn btn-dark">Регистрация</button>
+        <button id="btn-auth" class="btn btn-dark" onclick="redirectOnLoginPage()">Авторизация</button>
+        <button id="btn-reg" class="btn btn-dark" onclick="redirectOnRegistrationPage()">Регистрация</button>
     </div>
 </header>
 <main>
@@ -32,29 +33,29 @@
         >>
         <a href="/login">Авторизация</a>
     </div>
-    <div class="d-flex flex-column content-block login-block justify-content-between">
+    <form id="auth-form">
+    <div id="login-block" class="d-flex content-block flex-column justify-content-between">
         <div class="d-flex flex-column box-login">
-            <div class="d-flex form-email flex-column">
-                <label for="floatingEmail">Введите ваш Email:</label>
-                <input type="email" class="form-control" id="floatingEmail" placeholder="Email address">
+            <div class="d-flex form-login flex-column">
+                <label for="floatingLogin">Введите ваш логин:</label>
+                <input type="text" class="form-control" id="floatingLogin" placeholder="Введите логин">
             </div>
             <div class="d-flex form-passwd flex-column">
                 <label for="floatingPassword">Введите ваш пароль:</label>
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Введите пароль">
                 <a href="/send_email" class="forget-passwd align-self-end">Забыли пароль?</a>
             </div>
         </div>
         <div class="d-flex flex-wrap box-accept justify-content-between align-items-center">
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="RemebmerMe">
                 <label class="form-check-label" for="RemebmerMe">Запомнить меня</label>
+                <input class="form-check-input" form="auth-form" type="checkbox" id="RemebmerMe">
             </div>
-            <form>
-                <button type="button" formaction="../Views/index.html" formmethod="get" class="btn btn-dark">Войти</button>
-            </form>
+            <button type="submit" form="auth-form" class="btn btn-dark">Войти</button>
         </div>
-<!--        <p class="warning">Неправильный Email или пароль</p>-->
+        <!--        <p class="warning">Неправильный Email или пароль</p>-->
     </div>
+    </form>
 </main>
 <footer class="d-flex justify-content-around align-items-center">
     © Все права защищены
