--- a/Views/RecoverPassword.cshtml
+++ b/Views/RecoverPassword.cshtml
@@ -11,17 +11,17 @@
 </head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
-    <div class="d-flex flex-wrap my-nav-bar1 align-items-center justify-content-around">
+    <div id="my-nav-bar1" class="d-flex flex-wrap align-items-center justify-content-around">
         <a href="/" class="logo">HowIdidIT</a>
         <a href="/" class="pages">Главная</a>
         <a href="/sections" class="pages">Разделы</a>
     </div>
-    <div class="d-flex flex-wrap my-nav-bar2 align-items-center justify-content-around">
+    <div id="my-nav-bar2" class="d-flex flex-wrap align-items-center justify-content-around">
         <form class="form-search">
             <input type="search" class="form-control form-control-dark" placeholder="Поиск..." aria-label="Search">
         </form>
-        <button onclick="redirectOnLoginPage()" class="btn btn-dark">Авторизация</button>
-        <button onclick="redirectOnRegistrationPage()" class="btn btn-dark">Регистрация</button>
+        <button id="btn-auth" class="btn btn-dark" onclick="redirectOnLoginPage()">Авторизация</button>
+        <button id="btn-reg" class="btn btn-dark" onclick="redirectOnRegistrationPage()">Регистрация</button>
     </div>
 </header>
 <main>
@@ -35,14 +35,13 @@
         <a href="/send_email">Восстановление пароля</a>
     </div>
     <div class="d-flex flex-column content-block email-block justify-content-between">
-        <div class="d-flex flex-column form-email">
-            <label for="floatingEmail">Введите ваш Email:</label>
-            <input type="email" class="form-control" id="floatingEmail" placeholder="Email address">
-        </div>
-        <form class="btn-send align-self-end">
-            <button type="button" formaction="../Views/index.html" formmethod="get" class="btn btn-dark">Отправить</button>
+        <form>
+            <div class="d-flex flex-column form-login">
+                <label for="floatingEmail">Введите ваш логин:</label>
+                <input type="text" class="form-control" id="floatingEmail" placeholder="Введите логин">
+            </div>
+            <button type="button" class="btn btn-dark btn-send align-self-end">Отправить</button>
         </form>
-        <p class="shipped align-self-center">На ваш Email было отправлено сообщение</p>
     </div>
 </main>
 <footer class="d-flex justify-content-around align-items-center">
