--- a/Views/Section.cshtml
+++ b/Views/Section.cshtml
@@ -12,17 +12,17 @@
 </head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
-    <div class="d-flex flex-wrap my-nav-bar1 align-items-center justify-content-around">
+    <div id="my-nav-bar1" class="d-flex flex-wrap align-items-center justify-content-around">
         <a href="/" class="logo">HowIdidIT</a>
         <a href="/" class="pages">Главная</a>
         <a href="/sections" class="pages">Разделы</a>
     </div>
-    <div class="d-flex flex-wrap my-nav-bar2 align-items-center justify-content-around">
+    <div id="my-nav-bar2" class="d-flex flex-wrap align-items-center justify-content-around">
         <form class="form-search">
             <input type="search" class="form-control form-control-dark" placeholder="Поиск..." aria-label="Search">
         </form>
-        <button onclick="redirectOnLoginPage()" class="btn btn-dark">Авторизация</button>
-        <button onclick="redirectOnRegistrationPage()" class="btn btn-dark">Регистрация</button>
+        <button id="btn-auth" class="btn btn-dark" onclick="redirectOnLoginPage()">Авторизация</button>
+        <button id="btn-reg" class="btn btn-dark" onclick="redirectOnRegistrationPage()">Регистрация</button>
     </div>
 </header>
 <main>
@@ -92,9 +92,9 @@
                 </table>
             </div>
         </div>
-        <div class="content-block recent-block">
+        <div id="favorites-block" class="content-block">
             <h3 class="text-center">Избранное</h3><hr>
-            <ul>
+            <ul id="links-for-favorites">
                 <li><a href="/section">Веб-разработка</a></li>
                 <li><a href="#">GameDev</a></li>
                 <li><a href="#">Ребят, помогите сделать курсовую</a></li>
