--- a/wwwroot/css/login.css
+++ b/wwwroot/css/login.css
@@ -1,12 +1,12 @@
 ﻿main {
     display: grid;
-    grid-template-rows: max-content minmax(45vh, max-content);
-    grid-template-columns: minmax(35vw, max-content);
+    grid-template-rows: max-content max-content;
+    grid-template-columns: 35vw;
     justify-content: center;
     grid-row-gap: 10px;
 }
 
-.login-block {
+#login-block {
     grid-row: 2;
     grid-column: 1;
 }
@@ -22,13 +22,11 @@ label[for^=floating] {
     margin-bottom: 10px;
 }
 
-.form-email {
-    max-height: 40%;
+.form-login {
     margin-bottom: 35px;
 }
 
 .form-passwd {
-    max-height: 50%;
     margin-bottom: 10px;
 }
 
