--- a/Views/Registration.cshtml
+++ b/Views/Registration.cshtml
@@ -7,7 +7,8 @@
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/css/for_all_pages.css" rel="stylesheet">
     <link href="~/css/registration.css" rel="stylesheet">
-    <script defer src="~/js/for_all_pages.js"></script>
+    <script src="~/js/for_all_pages.js"></script>
+    <script defer src="~/js/registration.js"></script>
 </head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
@@ -33,16 +34,15 @@
         <a href="/registration">Регистрация</a>
     </div>
     <div class="d-flex flex-column content-block registration-block justify-content-between">
-        <form>
+        <form id="register-form">
             <div class="d-flex flex-column box-registration">
                 <div class="d-flex form-login flex-column">
-                    <label for="floatingEmail">Введите ваш логин:</label>
-                    <input type="text" class="form-control" id="floatingEmail" placeholder="Введите логин">
+                    <label for="floatingLogin">Введите ваш логин:</label>
+                    <input type="text" class="form-control" id="floatingLogin" placeholder="Введите логин">
                 </div>
                 <div class="d-flex form-passwd flex-column">
                     <label for="floatingPassword">Введите ваш пароль:</label>
                     <input type="password" class="form-control" id="floatingPassword" placeholder="Введите пароль">
-                    @* <p class="warning">Пароль должен содержать только латинские буквы и хотя бы одну цифру</p> *@
                 </div>
                 <div class="d-flex form-passwd flex-column">
                     <label for="floatingConfirmPassword">Подтвердите ваш пароль:</label>
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="d-flex btn-register justify-content-end align-items-center">
-                <button type="submit" class="btn btn-dark">Зарегистрироваться</button>
+                <button type="submit" form="register-form" class="btn btn-dark">Зарегистрироваться</button>
             </div>
         </form>
     </div>
