Created bookmark on section page, normalized code in js scrtipts

--- a/Views/Login.cshtml
+++ b/Views/Login.cshtml
@@ -7,8 +7,8 @@
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/css/for_all_pages.css" rel="stylesheet">
     <link href="~/css/login.css" rel="stylesheet">
-    <script src="~/js/for_all_pages.js"></script>
-    <script defer src="~/js/login.js"></script>
+    <script src="~/js/BtnLoginRegistrationOnPage.js"></script>
+    <script src="~/js/UserLogin.js"></script>
 </head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
