--- a/Views/RecoverPassword.cshtml
+++ b/Views/RecoverPassword.cshtml
@@ -6,8 +6,8 @@
     <title>Восстановление пароля</title>
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/css/for_all_pages.css" rel="stylesheet">
-    <link href="~/css/send_email.css" rel="stylesheet">
-    <script src="~/js/for_all_pages.js"></script>
+    <link href="~/css/recover_password.css" rel="stylesheet">
+    <script src="~/js/BtnLoginRegistrationOnPage.js"></script>
 </head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
@@ -34,7 +34,7 @@
         >>
         <a href="/send_email">Восстановление пароля</a>
     </div>
-    <div class="d-flex flex-column content-block email-block justify-content-between">
+    <div class="d-flex flex-column content-block login-block justify-content-between">
         <form>
             <div class="d-flex flex-column form-login">
                 <label for="floatingEmail">Введите ваш логин:</label>
