--- a/Views/Profile.cshtml
+++ b/Views/Profile.cshtml
@@ -7,7 +7,8 @@
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/css/profile.css" rel="stylesheet">
     <link href="~/css/for_all_pages.css" rel="stylesheet">
-    <script src="~/js/for_all_pages.js"></script>
+    <script src="~/js/BtnLoginRegistrationOnPage.js"></script>
+    <script src="~/js/GetDataForHeaderAndFavorites.js"></script>
 </head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
