--- a/Views/Registration.cshtml
+++ b/Views/Registration.cshtml
@@ -7,8 +7,8 @@
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/css/for_all_pages.css" rel="stylesheet">
     <link href="~/css/registration.css" rel="stylesheet">
-    <script src="~/js/for_all_pages.js"></script>
-    <script defer src="~/js/registration.js"></script>
+    <script src="~/js/BtnLoginRegistrationOnPage.js"></script>
+    <script src="~/js/UserRegistration.js"></script>
 </head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
