--- a/Views/Section.cshtml
+++ b/Views/Section.cshtml
@@ -9,7 +9,7 @@
     <link href="~/css/for_all_pages.css" rel="stylesheet">
     <script src="~/js/BtnLoginRegistrationOnPage.js"></script>
     <script src="~/js/GetDataForHeaderAndFavorites.js"></script>
-    <script src="~/js/AppendToFavorites.js"></script>
+    <script src="~/js/check.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="background text-font">
@@ -43,7 +43,7 @@
                 <div class ="d-flex justify-content-between">
                     <h3 class="name-of-section">Веб-разработка</h3><hr>
                     <input type="checkbox" class="btn-check" id="btn-add-to-favorites">
-                    <label class="btn shadow-none" for="btn-add-to-favorites">
+                    <label class="btn shadow-none checkbox-unchecked" for="btn-add-to-favorites">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 16 16">
                             <path d="M2 2v13.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2z"/>
                         </svg>
