--- a/wwwroot/css/change_password.css
+++ b/wwwroot/css/change_password.css
@@ -6,15 +6,9 @@
     grid-row-gap: 10px;
 }
 
-.changes-block {
+#changes-block {
     grid-row: 2;
     grid-column: 1;
-}
-
-.box-change {
-    flex-basis: max-content;
-    font-size: 0.8rem;
-    margin-bottom: 30px;
 }
 
 .form-passwd {
@@ -25,13 +19,4 @@
 label[for^=floating] {
     font-size: 1rem;
     margin-bottom: 10px;
-}
-
-.btn-save {
-    max-height: max-content;
-}
-
-.warning {
-    margin-top: 10px;
-    color: #ea1530;
 }
