--- a/Views/AllSections.cshtml
+++ b/Views/AllSections.cshtml
@@ -19,15 +19,15 @@
         <a href="/sections" class="pages">Разделы</a>
     </div>
     <div id="my-nav-bar2" class="d-flex flex-wrap align-items-center justify-content-around">
-        <form class="form-search">
-            <input type="search" class="form-control form-control-dark" placeholder="Поиск..." aria-label="Search">
+        <form id="form-search">
+            <input type="search" class="form-control" placeholder="Поиск..." aria-label="Search">
         </form>
-        <button id="btn-auth" class="btn btn-dark" onclick="redirectOnLoginPage()">Авторизация</button>
-        <button id="btn-reg" class="btn btn-dark" onclick="redirectOnRegistrationPage()">Регистрация</button>
+        <button id="btn-auth" class="btn btn-dark">Авторизация</button>
+        <button id="btn-reg" class="btn btn-dark">Регистрация</button>
     </div>
 </header>
 <main>
-    <div class="navigation">
+    <div id="navigation">
         <a href="/">
             <img src="~/pictures/home_icon.png" height=20 alt="Главная">Главная
         </a>
@@ -35,9 +35,9 @@
         <a href="/sections">Разделы</a>
     </div>
     <div class="d-flex justify-content-between">
-        <div class="main-block">
-            <div class="content-block sections-block">
-                <div class="list-of-sections">
+        <div id="main-block">
+            <div id="section-block" class="content-block">
+                <div id="list-of-sections">
                     <a href="/section" class="link-on-section">Веб-разработка</a>
                     <a href="#" class="link-on-section">GameDev</a>
                     <a href="#" class="link-on-section">Сетевые технологии</a>
@@ -55,13 +55,11 @@
                     <a href="#" class="link-on-section">.Net</a>
                 </div>
             </div>
-            <div class="d-flex flex-column content-block discussing-block">
-                <div class="d-flex justify-content-between header-of-desc">
+            <div id="discussing-block" class="d-flex flex-column content-block">
+                <div id="header-of-desc" class="d-flex justify-content-between">
                     <h3>Обсуждения:</h3>
-                    <div class="d-flex justify-content-between desc-buttons flex-wrap">
-                        <form>
-                            <button type="button" class="btn btn-dark btn-create-desc">Cоздать обсуждение</button>
-                        </form>
+                    <div id="desc-buttons" class="d-flex justify-content-between flex-wrap">
+                        <button id="btn-create-desc" type="button" class="btn btn-dark">Cоздать обсуждение</button>
                         <div class="dropdown">
                             <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
                                 Новые
@@ -74,7 +72,7 @@
                         </div>
                     </div>
                 </div>
-                <table class="table table-desc">
+                <table id="table-desc" class="table">
                     <thead>
                     <tr>
                         <th scope="col">#</th>
