--- a/Views/ChangePassword.cshtml
+++ b/Views/ChangePassword.cshtml
@@ -17,15 +17,15 @@
         <a href="/sections" class="pages">Разделы</a>
     </div>
     <div id="my-nav-bar2" class="d-flex flex-wrap align-items-center justify-content-around">
-        <form class="form-search">
-            <input type="search" class="form-control form-control-dark" placeholder="Поиск..." aria-label="Search">
+        <form id="form-search">
+            <input type="search" class="form-control" placeholder="Поиск..." aria-label="Search">
         </form>
-        <button id="btn-auth" class="btn btn-dark" onclick="redirectOnLoginPage()">Авторизация</button>
-        <button id="btn-reg" class="btn btn-dark" onclick="redirectOnRegistrationPage()">Регистрация</button>
+        <button id="btn-auth" class="btn btn-dark">Авторизация</button>
+        <button id="btn-reg" class="btn btn-dark">Регистрация</button>
     </div>
 </header>
 <main>
-    <div class="navigation">
+    <div id="navigation">
         <a href="/">
             <img src="~/pictures/home_icon.png" height=20 alt="Главная">Главная
         </a>
@@ -34,25 +34,17 @@
         >>
         <a href="/send_email">Восстановление пароля</a>
     </div>
-    <div class="d-flex flex-column content-block changes-block justify-content-between">
-        <div class="d-flex flex-column box-change">
-            <div class="d-flex form-passwd flex-column">
+    <form id="changes-block" class="d-flex flex-column content-block justify-content-between">
+        <div class="d-flex form-passwd flex-column">
                 <label for="floatingPassword">Введите новый пароль:</label>
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-<!--                <p class="warning">Пароль должен содержать только латинские буквы и хотя бы одну цифру</p>-->
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Введите пароль">
             </div>
             <div class="d-flex form-passwd flex-column">
                 <label for="floatingConfirmPassword">Подтвердите новый пароль:</label>
-                <input type="password" class="form-control" id="floatingConfirmPassword" placeholder="Confirm Password">
-<!--                <p class="warning">Пароли не совпадают</p>-->
+                <input type="password" class="form-control" id="floatingConfirmPassword" placeholder="Подтвердите пароль">
             </div>
-        </div>
-        <div class="d-flex btn-save justify-content-end align-items-center">
-            <form>
-                <button type="button" formaction="../Views/index.html" formmethod="get" class="btn btn-dark">Сохранить изменения</button>
-            </form>
-        </div>
-    </div>
+        <button type="button" class="btn btn-dark align-self-end">Сохранить изменения</button>
+    </form>
 </main>
 <footer class="d-flex justify-content-around align-items-center">
     © Все права защищены
