--- a/Views/Index.cshtml
+++ b/Views/Index.cshtml
@@ -18,26 +18,26 @@
         <a href="/sections" class="pages">Разделы</a>
     </div>
     <div id="my-nav-bar2" class="d-flex flex-wrap align-items-center justify-content-around">
-        <form class="form-search">
-            <input type="search" class="form-control form-control-dark" placeholder="Поиск..." aria-label="Search">
+        <form id="form-search">
+            <input type="search" class="form-control" placeholder="Поиск..." aria-label="Search">
         </form>
-        <button id="btn-auth" class="btn btn-dark" onclick="redirectOnLoginPage()">Авторизация</button>
-        <button id="btn-reg" class="btn btn-dark" onclick="redirectOnRegistrationPage()">Регистрация</button>
+        <button id="btn-auth" class="btn btn-dark">Авторизация</button>
+        <button id="btn-reg" class="btn btn-dark">Регистрация</button>
     </div>
 </header>
 <main>
-    <div class="navigation">
+    <div id="navigation">
         <a href="/">
             <img src="~/pictures/home_icon.png" height=20 alt="Главная">Главная
         </a>
     </div>
     <div class="d-flex justify-content-between">
-        <div class="main-block">
-            <div class="content content-block">
+        <div id="main-block">
+            <div id="content" class="content-block">
                 <h2>Добро пожаловать!</h2><hr>
                 <p>Форум посвящен IT-тематикам. Это место, где каждый сможет создать обсуждение, поговорить о проблемах, спросить о реализации той или иной вещи, выложить свое собственное исследование или просто пообщаться с другими людьми. Данный форум будет чем-то средним между обычным форумом и соц. сетью. Здесь мы ответим на самый главный вопрос: How I did it!!!</p>
             </div>
-            <div class="news content-block">
+            <div id="news" class="content-block">
                 <h2>Новости форума</h2><hr>
                 <p>Вот это хорошие новости!</p>
             </div>
