--- a/Views/Login.cshtml
+++ b/Views/Login.cshtml
@@ -18,24 +18,23 @@
         <a href="/sections" class="pages">Разделы</a>
     </div>
     <div id="my-nav-bar2" class="d-flex flex-wrap align-items-center justify-content-around">
-        <form class="form-search">
-            <input type="search" class="form-control form-control-dark" placeholder="Поиск..." aria-label="Search">
+        <form id="form-search">
+            <input type="search" class="form-control" placeholder="Поиск..." aria-label="Search">
         </form>
-        <button id="btn-auth" class="btn btn-dark" onclick="redirectOnLoginPage()">Авторизация</button>
-        <button id="btn-reg" class="btn btn-dark" onclick="redirectOnRegistrationPage()">Регистрация</button>
+        <button id="btn-auth" class="btn btn-dark">Авторизация</button>
+        <button id="btn-reg" class="btn btn-dark">Регистрация</button>
     </div>
 </header>
 <main>
-    <div class="navigation">
+    <div id="navigation">
         <a href="/">
             <img src="~/pictures/home_icon.png" height=20 alt="Главная">Главная
         </a>
         >>
         <a href="/login">Авторизация</a>
     </div>
-    <form id="auth-form">
-    <div id="login-block" class="d-flex content-block flex-column justify-content-between">
-        <div class="d-flex flex-column box-login">
+    <form id="login-block" class="d-flex content-block flex-column justify-content-between">
+        <div id="box-login" class="d-flex flex-column">
             <div class="d-flex form-login flex-column">
                 <label for="floatingLogin">Введите ваш логин:</label>
                 <input type="text" class="form-control" id="floatingLogin" placeholder="Введите логин">
@@ -43,18 +42,16 @@
             <div class="d-flex form-passwd flex-column">
                 <label for="floatingPassword">Введите ваш пароль:</label>
                 <input type="password" class="form-control" id="floatingPassword" placeholder="Введите пароль">
-                <a href="/send_email" class="forget-passwd align-self-end">Забыли пароль?</a>
+                <a href="/recover_password" class="forget-passwd align-self-end">Забыли пароль?</a>
             </div>
         </div>
-        <div class="d-flex flex-wrap box-accept justify-content-between align-items-center">
-            <div class="form-check">
-                <label class="form-check-label" for="RemebmerMe">Запомнить меня</label>
-                <input class="form-check-input" form="auth-form" type="checkbox" id="RemebmerMe">
+        <div id="box-accept" class="d-flex flex-wrap justify-content-between align-items-center">
+            <div class="d-flex form-check align-items-center">
+                <input class="form-check-input" type="checkbox" id="rememberMe">
+                <label for="rememberMe">Запомнить меня</label>
             </div>
-            <button type="submit" form="auth-form" class="btn btn-dark">Войти</button>
+            <button type="submit" class="btn btn-dark">Войти</button>
         </div>
-        <!--        <p class="warning">Неправильный Email или пароль</p>-->
-    </div>
     </form>
 </main>
 <footer class="d-flex justify-content-around align-items-center">
