--- a/Views/RecoverPassword.cshtml
+++ b/Views/RecoverPassword.cshtml
@@ -17,15 +17,15 @@
         <a href="/sections" class="pages">Разделы</a>
     </div>
     <div id="my-nav-bar2" class="d-flex flex-wrap align-items-center justify-content-around">
-        <form class="form-search">
-            <input type="search" class="form-control form-control-dark" placeholder="Поиск..." aria-label="Search">
+        <form id="form-search">
+            <input type="search" class="form-control" placeholder="Поиск..." aria-label="Search">
         </form>
-        <button id="btn-auth" class="btn btn-dark" onclick="redirectOnLoginPage()">Авторизация</button>
-        <button id="btn-reg" class="btn btn-dark" onclick="redirectOnRegistrationPage()">Регистрация</button>
+        <button id="btn-auth" class="btn btn-dark">Авторизация</button>
+        <button id="btn-reg" class="btn btn-dark">Регистрация</button>
     </div>
 </header>
 <main>
-    <div class="navigation">
+    <div id="navigation">
         <a href="/">
             <img src="~/pictures/home_icon.png" height=20 alt="Главная">Главная
         </a>
@@ -34,15 +34,13 @@
         >>
         <a href="/send_email">Восстановление пароля</a>
     </div>
-    <div class="d-flex flex-column content-block login-block justify-content-between">
-        <form>
-            <div class="d-flex flex-column form-login">
-                <label for="floatingEmail">Введите ваш логин:</label>
-                <input type="text" class="form-control" id="floatingEmail" placeholder="Введите логин">
-            </div>
-            <button type="button" class="btn btn-dark btn-send align-self-end">Отправить</button>
-        </form>
-    </div>
+    <form id="login-block" class="d-flex content-block flex-column justify-content-between">
+        <div class="d-flex flex-column form-login">
+            <label for="floatingLogin">Введите ваш логин:</label>
+            <input type="text" class="form-control" id="floatingLogin" placeholder="Введите логин">
+        </div>
+        <button type="button" class="btn btn-dark btn-send">Отправить</button>
+    </form>
 </main>
 <footer class="d-flex justify-content-around align-items-center">
     © Все права защищены
