--- a/Views/Registration.cshtml
+++ b/Views/Registration.cshtml
@@ -18,43 +18,38 @@
         <a href="/sections" class="pages">Разделы</a>
     </div>
     <div id="my-nav-bar2" class="d-flex flex-wrap align-items-center justify-content-around">
-        <form class="form-search">
-            <input type="search" class="form-control form-control-dark" placeholder="Поиск..." aria-label="Search">
+        <form id="form-search">
+            <input type="search" class="form-control" placeholder="Поиск..." aria-label="Search">
         </form>
-        <button id="btn-auth" class="btn btn-dark" onclick="redirectOnLoginPage()">Авторизация</button>
-        <button id="btn-reg" class="btn btn-dark" onclick="redirectOnRegistrationPage()">Регистрация</button>
+        <button id="btn-auth" class="btn btn-dark">Авторизация</button>
+        <button id="btn-reg" class="btn btn-dark">Регистрация</button>
     </div>
 </header>
 <main>
-    <div class="navigation">
+    <div id="navigation">
         <a href="/">
             <img src="~/pictures/home_icon.png" height=20 alt="Главная">Главная
         </a>
         >>
         <a href="/registration">Регистрация</a>
     </div>
-    <div class="d-flex flex-column content-block registration-block justify-content-between">
-        <form id="register-form">
-            <div class="d-flex flex-column box-registration">
-                <div class="d-flex form-login flex-column">
-                    <label for="floatingLogin">Введите ваш логин:</label>
-                    <input type="text" class="form-control" id="floatingLogin" placeholder="Введите логин">
-                </div>
-                <div class="d-flex form-passwd flex-column">
-                    <label for="floatingPassword">Введите ваш пароль:</label>
-                    <input type="password" class="form-control" id="floatingPassword" placeholder="Введите пароль">
-                </div>
-                <div class="d-flex form-passwd flex-column">
-                    <label for="floatingConfirmPassword">Подтвердите ваш пароль:</label>
-                    <input type="password" class="form-control" id="floatingConfirmPassword" placeholder="Подтвердите пароль">
-                    @* <p class="warning">Пароли не совпадают</p> *@
-                </div>
+    <form id="registration-block" class="d-flex flex-column content-block justify-content-between">
+        <div id="box-registration" class="d-flex flex-column">
+            <div class="d-flex form-login flex-column">
+                <label for="floatingLogin">Введите ваш логин:</label>
+                <input type="text" class="form-control" id="floatingLogin" placeholder="Введите логин">
             </div>
-            <div class="d-flex btn-register justify-content-end align-items-center">
-                <button type="submit" form="register-form" class="btn btn-dark">Зарегистрироваться</button>
+            <div class="d-flex form-passwd flex-column">
+                <label for="floatingPassword">Введите ваш пароль:</label>
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Введите пароль">
             </div>
-        </form>
-    </div>
+            <div class="d-flex form-passwd flex-column">
+                <label for="floatingConfirmPassword">Подтвердите ваш пароль:</label>
+                <input type="password" class="form-control" id="floatingConfirmPassword" placeholder="Подтвердите пароль">
+            </div>
+        </div>
+        <button type="submit" class="btn btn-dark btn-register">Зарегистрироваться</button>
+    </form>
 </main>
 <footer class="d-flex justify-content-around align-items-center">
     © Все права защищены
