--- a/wwwroot/css/discussion.css
+++ b/wwwroot/css/discussion.css
@@ -11,7 +11,7 @@ main {
     justify-content: center;
 }
 
-.main-block {
+#main-block {
     grid-row: 2;
     display: grid;
     grid-template-rows: repeat(auto-fit, max-content);
@@ -35,19 +35,19 @@ main {
     grid-column: 2;
 }
 
-.disc-buttons {
+#disc-buttons {
     grid-row: auto;
     grid-column: 1 / end;
     justify-self: center;
     min-width: 35%;
 }
 
-.add-answer {
+#add-answer {
     flex-basis: max-content;
     margin-right: 10px;
 }
 
-.create-disc {
+#create-disc {
     flex-basis: max-content;
     margin-left: 10px;
 }
