--- a/wwwroot/css/index.css
+++ b/wwwroot/css/index.css
@@ -7,7 +7,7 @@
     justify-content: center;
 }
 
-.main-block {
+#main-block {
     grid-row: 2;
     display: grid;
     grid-template-rows: minmax(20vh, max-content) 30px minmax(20vh, max-content);
@@ -15,13 +15,13 @@
     grid-row-gap: 5px;
 }
 
-.content {
+#content {
     font-size: 0.8rem;
     grid-row: 1;
     grid-column: 1;
 }
 
-.news {
+#news {
     font-size: 0.8rem;
     grid-row: 3;
     grid-column: 1;
