--- a/wwwroot/css/recover_password.css
+++ b/wwwroot/css/recover_password.css
@@ -6,7 +6,7 @@
     grid-row-gap: 10px;
 }
 
-.login-block {
+#login-block {
     grid-row: 2;
     grid-column: 1;
 }
@@ -23,8 +23,9 @@ label[for^=floating] {
 }
 
 .btn-send {
-    max-height: max-content;
-    margin-bottom: 20px;
+    max-height: min-content;
+    align-self: end;
+    margin-top: 20px;
 }
 
 .shipped {
