--- a/Views/Login.cshtml
+++ b/Views/Login.cshtml
@@ -7,7 +7,7 @@
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/css/for_all_pages.css" rel="stylesheet">
     <link href="~/css/login.css" rel="stylesheet">
-    <script src="~/js/BtnLoginRegistrationOnPage.js"></script>
+    <script src="~/js/DefaultEventsForButtons.js"></script>
     <script src="~/js/UserLogin.js"></script>
 </head>
 <body class="background text-font">
@@ -15,7 +15,7 @@
     <div id="my-nav-bar1" class="d-flex flex-wrap align-items-center justify-content-around">
         <a href="/" class="logo">HowIdidIT</a>
         <a href="/" class="pages">Главная</a>
-        <a href="/sections" class="pages">Разделы</a>
+        <a href="/topics" class="pages">Разделы</a>
     </div>
     <div id="my-nav-bar2" class="d-flex flex-wrap align-items-center justify-content-around">
         <form id="form-search">
