--- a/wwwroot/css/for_all_pages.css
+++ b/wwwroot/css/for_all_pages.css
@@ -73,13 +73,22 @@ header {
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
 }
 
-.btn-dark {
-    background-color: #222121;
-    color: #DBDBDB;
+.btn-dark, .btn-danger {
+    border-width: 2px;
     border-radius: 10px;
     border-color: black;
     font-style: normal;
     word-break: normal;
+}
+
+.btn-dark {
+    background-color: #222121;
+    color: #DBDBDB;
+}
+
+.btn-danger {
+    background-color: red;
+    color: #DBDBDB;
 }
 
 button[class^=btn]:hover {
@@ -120,7 +129,6 @@ img[alt=Главная]{
 }
 
 #favorites-block {
-    display: none;
     flex-basis: 22%;
     align-self: start;
     max-width: 25%;
